<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DealerDashboardPage">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_jpg_dashboard_page"
            android:transitionName="transition_dashboard">

            <LinearLayout
                android:id="@+id/ll_login_page_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:transitionName="transition_go_Button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.04">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_store" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/archivo_black"
                    android:text="@string/welcome"
                    android:textAllCaps="true"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.98"
                    app:layout_constraintVertical_bias="0.05">

                    <TextView
                        android:id="@+id/tv_dashboard_logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_out"
                        android:layout_gravity="center"
                        android:fontFamily="@font/archivo_black"/>

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_dealer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_login_page_top"
                app:layout_constraintVertical_bias="0.06">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_baseline_account" />

                <TextView
                    android:id="@+id/tv_dealer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/days_one"
                    android:text="@string/example"
                    android:textAllCaps="false"
                    android:textColor="@color/color_FadedBlack"
                    android:textSize="26sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_dealer_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_dealer_name"
                app:layout_constraintVertical_bias="0.02">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dealer ID"
                        android:textColor="@color/color_FadedBlack"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="State"

                        android:textColor="@color/color_FadedBlack"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="District"

                        android:textColor="@color/color_FadedBlack"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Municipality"
                        android:textColor="@color/color_FadedBlack"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text=" :"
                        android:textColor="@color/color_FadedBlack"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" :"
                        android:textColor="@color/color_FadedBlack"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" :"
                        android:textColor="@color/color_FadedBlack"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" :"
                        android:textColor="@color/color_FadedBlack"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_dealer_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dealer ID"
                        android:textColor="@color/color_FadedBlack"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_dealer_location_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="State"

                        android:textColor="@color/color_FadedBlack"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_dealer_location_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="District"
                        android:textColor="@color/color_FadedBlack"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_dealer_location_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Municipality"
                        android:textColor="@color/color_FadedBlack"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_update_ration"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:padding="10dp"
                android:backgroundTint="@color/color_SeaGreen"
                android:text="@string/dashboard_upload_button_text"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                app:icon="@drawable/ic_baseline_grocery_store"
                app:iconGravity="start"
                app:iconTint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_dealer_details"
                app:layout_constraintVertical_bias="0.5"
                app:strokeColor="@color/color_DeepBlack"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_view_ration"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:padding="10dp"
                android:backgroundTint="@color/color_SeaGreen"
                android:text="@string/dashboard_view_button_text"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:transitionName="transition_dashboard"
                app:icon="@drawable/ic_baseline_view_month"
                app:iconGravity="start"
                app:iconTint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mb_update_ration"
                app:layout_constraintVertical_bias="0.0"
                app:strokeColor="@color/color_DeepBlack"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_scan_qr"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:padding="10dp"
                android:backgroundTint="@color/color_SeaGreen"
                android:text="@string/dashboard_scan_button_text"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:transitionName="transition_Bill_Scan"
                app:icon="@drawable/ic_baseline_qr_code"
                app:iconGravity="start"
                app:iconTint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mb_view_ration"
                app:layout_constraintVertical_bias="0.0"
                app:strokeColor="@color/color_DeepBlack"
                app:strokeWidth="1dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>